# cc-timer

./: .gitignore  CC Timer.vbs  Project Log and Next Approach.md  QUICK_START.md  README.md  build-windows.bat  create-shortcut.ps1  git-push.bat  launch-standalone.bat  package-lock.json  package.json  test-launch.bat
src/: clock.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
