[package]
name = "cc-timer"
version = "0.1.0"
description = "Claude Code Session Timer"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "cc-timer"
path = "src/main.rs"
